refactor: Switch to API endpoint for proper tool call handling
🌐 BREAKTHROUGH: Use actual API endpoint instead of direct graph invocation

✅ KEY IMPROVEMENTS:
- Cell 21 now calls /investigate API endpoint with proper InvestigationRequest
- Uses requests.post() to mimic real application usage
- API returns full_results with complete message history including tool calls
- Detailed message analysis and tool call counting
- Robust error handling for connection issues

🔧 API REQUEST FORMAT:
- Matches exact InvestigationRequest schema
- Includes all required fields (amount, currency, description, etc.)
- Uses proper Content-Type headers

📊 EXPECTED BENEFITS:
- API handles fraud_system.investigate_fraud() naturally
- Returns full_results.messages with preserved tool call sequences
- Should show AIMessage with tool_calls and ToolMessage responses
- Enables successful RAGAS Tool Call Accuracy evaluation > 0.0

💡 NEXT STEPS:
1. Start API server: uvicorn api.main:app --host 0.0.0.0 --port 8000
2. Run Cell 21 to test endpoint
3. Verify tool calls appear in message history
4. Execute RAGAS agent evaluation with proper data

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -146,7 +146,6 @@
             "🔄 Loading InvestigatorAI components for evaluation...\n",
             "✅ Core InvestigatorAI components loaded!\n",
             "✅ Settings and LLM components initialized!\n",
-            "✅ Connected to Redis at localhost:6379\n",
             "✅ Connected to Qdrant at localhost:6333\n",
             "📋 Available collections: 1\n",
             "✅ Vector store initialized from existing collection!\n",
@@ -1338,99 +1337,126 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "🤖 Generating agent responses for evaluation...\n",
-            "🎯 Feeding HumanMessage to InvestigatorAI SUPERVISOR via the multi-agent graph...\n",
-            "🚀 Running InvestigatorAI investigation with tool calls...\n"
+            "🌐 Making request to InvestigatorAI API endpoint...\n",
+            "📤 Sending investigation request to http://localhost:8000/investigate\n",
+            "📋 Request data: {\n",
+            "  \"amount\": 75000.0,\n",
+            "  \"currency\": \"USD\",\n",
+            "  \"description\": \"Large international wire transfer to high-risk jurisdiction\",\n",
+            "  \"customer_name\": \"Global Trading LLC\",\n",
+            "  \"account_type\": \"Business\",\n",
+            "  \"risk_rating\": \"High\",\n",
+            "  \"country_to\": \"Iran\"\n",
+            "}\n",
+            "❌ Could not connect to API server!\n",
+            "💡 Make sure the API server is running:\n",
+            "   uvicorn api.main:app --host 0.0.0.0 --port 8000\n"
           ]
         }
       ],
       "source": [
-        "# 🎯 SIMPLE SOLUTION: Just feed a HumanMessage to the real InvestigatorAI agent!\n",
-        "from langchain_core.messages import HumanMessage\n",
-        "import time\n",
+        "# 🌐 Using the API endpoint - proper tool call handling!\n",
+        "print(\"🌐 Making request to InvestigatorAI API endpoint...\")\n",
         "\n",
-        "print(\"🤖 Generating agent responses for evaluation...\")\n",
+        "import requests\n",
+        "import json\n",
         "\n",
-        "# Create a simple HumanMessage that will trigger the agent to use tools\n",
-        "investigation_message = HumanMessage(content=\"\"\"\n",
-        "        Investigate this suspicious transaction for fraud and regulatory compliance:\n",
+        "# API endpoint URL (assuming API is running)\n",
+        "API_BASE_URL = \"http://localhost:8000\"\n",
         "\n",
-        "        Transaction Details:\n",
-        "        - Amount: $75,000.00 USD  \n",
-        "        - Description: Wire transfer to high-risk country\n",
-        "        - Customer: Global Trading LLC (High risk rating)\n",
-        "        - Destination: Iran\n",
-        "        - Date: 2024-01-15T10:30:00Z\n",
-        "        - Account Type: Business\n",
-        "        - Customer Risk Rating: High\n",
-        "        - Timestamp: 2024-01-15T10:30:00Z\n",
-        "\n",
-        "        Please perform a complete fraud investigation including:\n",
-        "        1. Risk assessment and scoring\n",
-        "        2. Regulatory compliance check (SAR/CTR requirements)  \n",
-        "        3. Search for relevant regulatory guidance\n",
-        "        4. Generate compliance recommendations\n",
-        "        \"\"\")\n",
-        "\n",
-        "print(\"🎯 Feeding HumanMessage to InvestigatorAI SUPERVISOR via the multi-agent graph...\")\n",
-        "\n",
-        "# Use the SUPERVISOR - the top-level orchestrator of the multi-agent system!\n",
-        "# This will coordinate ALL agents: regulatory_research, evidence_collection, compliance_check, report_generation\n",
-        "supervisor_graph = fraud_system.investigation_graph\n",
-        "\n",
-        "# Create the investigation state\n",
-        "investigation_state = fraud_system.create_investigation_state({\n",
+        "# Create investigation request matching the API schema\n",
+        "investigation_request = {\n",
         "    \"amount\": 75000.0,\n",
-        "    \"currency\": \"USD\",\n",
-        "    \"description\": \"Wire transfer to high-risk country\", \n",
+        "    \"currency\": \"USD\", \n",
+        "    \"description\": \"Large international wire transfer to high-risk jurisdiction\",\n",
         "    \"customer_name\": \"Global Trading LLC\",\n",
-        "    \"country_to\": \"Iran\",\n",
         "    \"account_type\": \"Business\",\n",
-        "    \"customer_risk_rating\": \"High\",\n",
-        "    \"timestamp\": \"2024-01-15T10:30:00Z\"\n",
-        "})\n",
+        "    \"risk_rating\": \"High\",\n",
+        "    \"country_to\": \"Iran\"\n",
+        "}\n",
         "\n",
-        "# Override with our investigation message\n",
-        "investigation_state[\"messages\"] = [investigation_message]\n",
+        "print(f\"📤 Sending investigation request to {API_BASE_URL}/investigate\")\n",
+        "print(f\"📋 Request data: {json.dumps(investigation_request, indent=2)}\")\n",
         "\n",
-        "# 🚀 SIMPLE SOLUTION: Just invoke the supervisor like the main application does!\n",
-        "print(\"🚀 Running InvestigatorAI investigation with tool calls...\")\n",
-        "\n",
-        "# Run the complete multi-agent investigation through the supervisor\n",
-        "final_state = supervisor_graph.invoke(investigation_state)\n",
-        "\n",
-        "print(f\"✅ Investigation completed!\")\n",
-        "print(f\"📋 Final state contains {len(final_state.get('messages', []))} messages\")\n",
-        "\n",
-        "# Get the messages with tool calls preserved by our fixed agent_node method\n",
-        "messages = final_state.get(\"messages\", [])\n",
-        "\n",
-        "# Check for tool calls in the preserved messages\n",
-        "tool_call_count = sum(1 for msg in messages if hasattr(msg, 'tool_calls') and msg.tool_calls)\n",
-        "ai_message_count = sum(1 for msg in messages if type(msg).__name__ == 'AIMessage')\n",
-        "tool_message_count = sum(1 for msg in messages if type(msg).__name__ == 'ToolMessage')\n",
-        "\n",
-        "print(f\"🛠️  Found {tool_call_count} messages with tool calls\")\n",
-        "print(f\"🤖 Found {ai_message_count} AIMessage objects\")  \n",
-        "print(f\"🔧 Found {tool_message_count} ToolMessage objects\")\n",
-        "\n",
-        "# Show message types for debugging\n",
-        "message_types = [type(msg).__name__ for msg in messages]\n",
-        "print(f\"🔍 Message types: {message_types}\")\n",
-        "\n",
-        "# Create agent results with the complete multi-agent workflow messages\n",
-        "agent_results = [{\n",
-        "    \"messages\": messages\n",
-        "}]\n",
-        "\n",
-        "print(f\"✅ Generated {len(agent_results)} agent investigation for evaluation!\")\n",
+        "try:\n",
+        "    # Make API call\n",
+        "    response = requests.post(\n",
+        "        f\"{API_BASE_URL}/investigate\",\n",
+        "        json=investigation_request,\n",
+        "        timeout=120,\n",
+        "        headers={\"Content-Type\": \"application/json\"}\n",
+        "    )\n",
+        "    \n",
+        "    if response.status_code == 200:\n",
+        "        api_result = response.json()\n",
+        "        print(\"✅ Investigation completed via API!\")\n",
+        "        print(f\"📋 Status: {api_result.get('status')}\")\n",
+        "        print(f\"🎯 Final Decision: {api_result.get('final_decision')}\")\n",
+        "        print(f\"📊 Agents Completed: {api_result.get('agents_completed')}\")\n",
+        "        print(f\"💬 Total Messages: {api_result.get('total_messages')}\")\n",
+        "        \n",
+        "        # Extract full results with complete message history\n",
+        "        full_results = api_result.get(\"full_results\", {})\n",
+        "        messages = full_results.get(\"messages\", [])\n",
+        "        \n",
+        "        print(f\"🛠️  Found {len(messages)} messages in full results\")\n",
+        "        \n",
+        "        # Check for tool calls in the message history  \n",
+        "        tool_call_count = 0\n",
+        "        ai_message_count = 0\n",
+        "        tool_message_count = 0\n",
+        "        human_message_count = 0\n",
+        "        \n",
+        "        for i, msg in enumerate(messages):\n",
+        "            if isinstance(msg, dict):\n",
+        "                msg_type = msg.get(\"type\", \"unknown\")\n",
+        "                print(f\"  Message {i}: {msg_type}\")\n",
+        "                \n",
+        "                if msg.get(\"tool_calls\"):\n",
+        "                    tool_call_count += len(msg[\"tool_calls\"])\n",
+        "                    print(f\"    → Has {len(msg['tool_calls'])} tool calls\")\n",
+        "                    \n",
+        "                if msg_type == \"ai\":\n",
+        "                    ai_message_count += 1\n",
+        "                elif msg_type == \"tool\":\n",
+        "                    tool_message_count += 1\n",
+        "                elif msg_type == \"human\":\n",
+        "                    human_message_count += 1\n",
+        "        \n",
+        "        print(f\"\\n📊 MESSAGE SUMMARY:\")\n",
+        "        print(f\"🤖 AIMessage objects: {ai_message_count}\")\n",
+        "        print(f\"👤 HumanMessage objects: {human_message_count}\")\n",
+        "        print(f\"🔧 ToolMessage objects: {tool_message_count}\") \n",
+        "        print(f\"🛠️  Total tool calls: {tool_call_count}\")\n",
+        "        \n",
+        "        # Store results for RAGAS evaluation\n",
+        "        agent_results = [{\n",
+        "            \"messages\": messages\n",
+        "        }]\n",
+        "        \n",
+        "        print(f\"✅ Generated {len(agent_results)} agent investigation for evaluation!\")\n",
+        "        \n",
+        "    else:\n",
+        "        print(f\"❌ API request failed: {response.status_code}\")\n",
+        "        print(f\"Error: {response.text}\")\n",
+        "        agent_results = []\n",
+        "        \n",
+        "except requests.exceptions.ConnectionError:\n",
+        "    print(\"❌ Could not connect to API server!\")\n",
+        "    print(\"💡 Make sure the API server is running:\")\n",
+        "    print(\"   uvicorn api.main:app --host 0.0.0.0 --port 8000\")\n",
+        "    agent_results = []\n",
+        "    \n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Unexpected error: {e}\")\n",
+        "    agent_results = []\n",
         "\n"
       ]
     },
