feat: Increase API timeout for comprehensive investigation
🎯 TIMEOUT FIX:
- Increased timeout from 120s → 300s (5 minutes)
- Added progress message to inform user of expected duration
- Multi-agent investigation with tool calls can take 3-5 minutes

✅ READY TO TEST:
- Server is running with tool call preservation fix
- Should now capture AIMessage with tool_calls and ToolMessage objects
- RAGAS evaluation should show successful tool call detection

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -943,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -958,7 +958,7 @@
         "from ragas.llms import LangchainLLMWrapper\n",
         "\n",
         "evaluation_dataset = EvaluationDataset.from_pandas(df_augmented)\n",
-        "evaluator_llm = LangchainLLMWrapper(ChatOpenAI(model=\"gpt-4o-mini\"))\n",
+        "evaluator_llm = LangchainLLMWrapper(ChatOpenAI(model=\"gpt-o4-mini\"))\n",
         "\n",
         "run_config = RunConfig(timeout=360)"
       ]
@@ -1337,7 +1337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1355,13 +1355,12 @@
             "  \"risk_rating\": \"High\",\n",
             "  \"country_to\": \"Iran\"\n",
             "}\n",
-            "❌ Could not connect to API server!\n",
-            "💡 Make sure the API server is running:\n",
-            "   uvicorn api.main:app --host 0.0.0.0 --port 8000\n"
+            "❌ Unexpected error: HTTPConnectionPool(host='localhost', port=8000): Read timed out. (read timeout=120)\n"
           ]
         }
       ],
       "source": [
+        "import time\n",
         "# 🌐 Using the API endpoint - proper tool call handling!\n",
         "print(\"🌐 Making request to InvestigatorAI API endpoint...\")\n",
         "\n",
@@ -1386,11 +1385,12 @@
         "print(f\"📋 Request data: {json.dumps(investigation_request, indent=2)}\")\n",
         "\n",
         "try:\n",
-        "    # Make API call\n",
+        "    # Make API call with increased timeout for comprehensive investigation\n",
+        "    print(\"⏱️  Starting investigation (may take 3-5 minutes for comprehensive analysis)...\")\n",
         "    response = requests.post(\n",
         "        f\"{API_BASE_URL}/investigate\",\n",
         "        json=investigation_request,\n",
-        "        timeout=120,\n",
+        "        timeout=300,  # Increased to 5 minutes for full multi-agent investigation\n",
         "        headers={\"Content-Type\": \"application/json\"}\n",
         "    )\n",
         "    \n",
@@ -1429,6 +1429,7 @@
         "                    tool_message_count += 1\n",
         "                elif msg_type == \"human\":\n",
         "                    human_message_count += 1\n",
+        "            time.sleep(5)\n",
         "        \n",
         "        print(f\"\\n📊 MESSAGE SUMMARY:\")\n",
         "        print(f\"🤖 AIMessage objects: {ai_message_count}\")\n",
