debug: Add tool call ID matching validation and message sequence debugging
🔧 ENHANCED DEBUGGING FOR RAGAS VALIDATION:

✅ TOOL CALL CLEANING:
- Remove 'type': 'tool_call' field from tool_calls (RAGAS doesn't expect this)
- Clean tool_calls format: {'name', 'args', 'id'} only
- Remove None values from tool call dictionaries

🔍 DEBUG OUTPUT ADDED:
- Show AIMessage tool_calls IDs for each message
- Show ToolMessage tool_call_id for each message
- Display message sequence validation (first 10 messages)
- Identify ordering issues between AIMessage → ToolMessage pairs

🎯 RAGAS VALIDATION REQUIREMENT:
- ToolMessage must immediately follow AIMessage with matching tool_call_id
- Debug will show if IDs match and sequence is correct

💡 NEXT STEPS:
- Run Cell 26 to see debug output
- Identify any ID mismatches or ordering issues
- Fix conversion logic based on debug results

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -2029,7 +2029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2076,7 +2076,21 @@
         "            tool_calls = msg_dict.get(\"tool_calls\", [])\n",
         "            ai_msg = AIMessage(content=content, name=name)\n",
         "            if tool_calls:\n",
-        "                ai_msg.tool_calls = tool_calls\n",
+        "                # Clean tool_calls format for RAGAS compatibility\n",
+        "                cleaned_tool_calls = []\n",
+        "                for tool_call in tool_calls:\n",
+        "                    # Remove 'type' field that RAGAS doesn't expect\n",
+        "                    cleaned_call = {\n",
+        "                        \"name\": tool_call.get(\"name\"),\n",
+        "                        \"args\": tool_call.get(\"args\", {}),\n",
+        "                        \"id\": tool_call.get(\"id\")\n",
+        "                    }\n",
+        "                    # Remove None values\n",
+        "                    cleaned_call = {k: v for k, v in cleaned_call.items() if v is not None}\n",
+        "                    cleaned_tool_calls.append(cleaned_call)\n",
+        "                \n",
+        "                ai_msg.tool_calls = cleaned_tool_calls\n",
+        "                print(f\"🔧 AIMessage tool_calls: {[tc.get('id') for tc in cleaned_tool_calls]}\")\n",
         "            langchain_messages.append(ai_msg)\n",
         "            \n",
         "        elif msg_type == \"ToolMessage\":\n",
@@ -2087,6 +2101,7 @@
         "                tool_call_id=tool_call_id,\n",
         "                name=name\n",
         "            )\n",
+        "            print(f\"🔧 ToolMessage tool_call_id: {tool_call_id}\")\n",
         "            langchain_messages.append(tool_msg)\n",
         "            \n",
         "        elif msg_type == \"HumanMessage\":\n",
@@ -2112,6 +2127,18 @@
         "        ai_with_tools = sum(1 for msg in langchain_messages if isinstance(msg, AIMessage) and hasattr(msg, 'tool_calls') and msg.tool_calls)\n",
         "        tool_messages = sum(1 for msg in langchain_messages if isinstance(msg, ToolMessage))\n",
         "        print(f\"🛠️  Found {ai_with_tools} AIMessages with tool calls and {tool_messages} ToolMessages\")\n",
+        "        \n",
+        "        # Debug message sequence for RAGAS validation\n",
+        "        print(f\"\\n🔍 Message sequence validation:\")\n",
+        "        for i, msg in enumerate(langchain_messages[:10]):  # Show first 10 messages\n",
+        "            if isinstance(msg, AIMessage) and hasattr(msg, 'tool_calls') and msg.tool_calls:\n",
+        "                tool_ids = [tc.get('id') for tc in msg.tool_calls]\n",
+        "                print(f\"  {i}: AIMessage with tool_calls {tool_ids}\")\n",
+        "            elif isinstance(msg, ToolMessage):\n",
+        "                print(f\"  {i}: ToolMessage with tool_call_id '{msg.tool_call_id}'\")\n",
+        "            else:\n",
+        "                print(f\"  {i}: {type(msg).__name__}\")\n",
+        "        print(\"...\")\n",
         "        \n",
         "        # Convert LangChain messages to RAGAS format\n",
         "        ragas_trace = convert_to_ragas_messages(langchain_messages)\n",
