fix: Filter messages to valid tool call sequences for RAGAS validation

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -2029,7 +2029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -2038,16 +2038,37 @@
           "text": [
             "📊 Evaluating Tool Call Accuracy...\n",
             "🔍 Got 24 dictionary messages from API\n",
-            "✅ Converted to 24 LangChain message objects\n",
+            "✅ Added tool call pair: search_regulatory_documents → call_search_regulatory_documents_0\n",
+            "✅ Added tool call pair: search_web_intelligence → call_search_web_intelligence_2\n",
+            "✅ Added tool call pair: calculate_transaction_risk → call_calculate_transaction_risk_0\n",
+            "✅ Added tool call pair: get_exchange_rate_data → call_get_exchange_rate_data_2\n",
+            "✅ Added tool call pair: search_web_intelligence → call_search_web_intelligence_4\n",
+            "✅ Added tool call pair: check_compliance_requirements → call_check_compliance_requirements_0\n",
+            "✅ Added tool call pair: search_regulatory_documents → call_search_regulatory_documents_2\n",
+            "🔍 Filtered 24 → 14 messages for RAGAS validation\n",
+            "✅ Converted to 14 LangChain message objects\n",
             "🛠️  Found 7 AIMessages with tool calls and 7 ToolMessages\n",
-            "✅ Successfully converted to 24 RAGAS messages\n",
+            "\n",
+            "🔍 Message sequence validation:\n",
+            "  0: AIMessage with tool_calls ['call_search_regulatory_documents_0']\n",
+            "  1: ToolMessage with tool_call_id 'call_search_regulatory_documents_0'\n",
+            "  2: AIMessage with tool_calls ['call_search_web_intelligence_2']\n",
+            "  3: ToolMessage with tool_call_id 'call_search_web_intelligence_2'\n",
+            "  4: AIMessage with tool_calls ['call_calculate_transaction_risk_0']\n",
+            "  5: ToolMessage with tool_call_id 'call_calculate_transaction_risk_0'\n",
+            "  6: AIMessage with tool_calls ['call_get_exchange_rate_data_2']\n",
+            "  7: ToolMessage with tool_call_id 'call_get_exchange_rate_data_2'\n",
+            "  8: AIMessage with tool_calls ['call_search_web_intelligence_4']\n",
+            "  9: ToolMessage with tool_call_id 'call_search_web_intelligence_4'\n",
+            "...\n",
+            "✅ Successfully converted to 14 RAGAS messages\n",
             "❌ Error in Tool Call Accuracy evaluation: 1 validation error for MultiTurnSample\n",
             "user_input\n",
-            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[HumanMessage(content='In...ata=None, type='human')], input_type=list]\n",
+            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[AIMessage(content='I nee...data=None, type='tool')], input_type=list]\n",
             "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n",
             "🔍 Error details: 1 validation error for MultiTurnSample\n",
             "user_input\n",
-            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[HumanMessage(content='In...ata=None, type='human')], input_type=list]\n",
+            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[AIMessage(content='I nee...data=None, type='tool')], input_type=list]\n",
             "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n",
             "📋 First dict message type: HumanMessage\n",
             "💡 Check message conversion logic\n"
@@ -2063,53 +2084,72 @@
         "from langchain_core.messages import AIMessage, ToolMessage, HumanMessage\n",
         "\n",
         "def convert_dict_to_langchain_messages(dict_messages):\n",
-        "    \"\"\"Convert serialized dictionary messages back to LangChain message objects\"\"\"\n",
-        "    langchain_messages = []\n",
-        "    \n",
+        "    \"\"\"Convert serialized dictionary messages to LangChain objects for RAGAS validation\"\"\"\n",
+        "    # First pass: convert all messages\n",
+        "    all_messages = []\n",
         "    for msg_dict in dict_messages:\n",
         "        msg_type = msg_dict.get(\"type\", \"\")\n",
         "        content = msg_dict.get(\"content\", \"\")\n",
         "        name = msg_dict.get(\"name\")\n",
         "        \n",
         "        if msg_type == \"AIMessage\":\n",
-        "            # Create AIMessage with tool_calls if present\n",
         "            tool_calls = msg_dict.get(\"tool_calls\", [])\n",
         "            ai_msg = AIMessage(content=content, name=name)\n",
         "            if tool_calls:\n",
         "                # Clean tool_calls format for RAGAS compatibility\n",
         "                cleaned_tool_calls = []\n",
         "                for tool_call in tool_calls:\n",
-        "                    # Remove 'type' field that RAGAS doesn't expect\n",
         "                    cleaned_call = {\n",
         "                        \"name\": tool_call.get(\"name\"),\n",
         "                        \"args\": tool_call.get(\"args\", {}),\n",
         "                        \"id\": tool_call.get(\"id\")\n",
         "                    }\n",
-        "                    # Remove None values\n",
         "                    cleaned_call = {k: v for k, v in cleaned_call.items() if v is not None}\n",
         "                    cleaned_tool_calls.append(cleaned_call)\n",
-        "                \n",
         "                ai_msg.tool_calls = cleaned_tool_calls\n",
-        "                print(f\"🔧 AIMessage tool_calls: {[tc.get('id') for tc in cleaned_tool_calls]}\")\n",
-        "            langchain_messages.append(ai_msg)\n",
+        "            all_messages.append(ai_msg)\n",
         "            \n",
         "        elif msg_type == \"ToolMessage\":\n",
-        "            # Create ToolMessage with tool_call_id\n",
         "            tool_call_id = msg_dict.get(\"tool_call_id\")\n",
-        "            tool_msg = ToolMessage(\n",
-        "                content=content, \n",
-        "                tool_call_id=tool_call_id,\n",
-        "                name=name\n",
-        "            )\n",
-        "            print(f\"🔧 ToolMessage tool_call_id: {tool_call_id}\")\n",
-        "            langchain_messages.append(tool_msg)\n",
+        "            tool_msg = ToolMessage(content=content, tool_call_id=tool_call_id, name=name)\n",
+        "            all_messages.append(tool_msg)\n",
         "            \n",
         "        elif msg_type == \"HumanMessage\":\n",
-        "            # Create HumanMessage\n",
         "            human_msg = HumanMessage(content=content, name=name)\n",
-        "            langchain_messages.append(human_msg)\n",
+        "            all_messages.append(human_msg)\n",
         "    \n",
-        "    return langchain_messages\n",
+        "    # Second pass: Extract only valid tool call sequences for RAGAS\n",
+        "    # RAGAS requires: AIMessage(with tool_calls) → ToolMessage pairs\n",
+        "    valid_messages = []\n",
+        "    i = 0\n",
+        "    \n",
+        "    while i < len(all_messages):\n",
+        "        msg = all_messages[i]\n",
+        "        \n",
+        "        # Look for AIMessage with tool_calls\n",
+        "        if (isinstance(msg, AIMessage) and \n",
+        "            hasattr(msg, 'tool_calls') and \n",
+        "            msg.tool_calls and \n",
+        "            len(msg.tool_calls) > 0):\n",
+        "            \n",
+        "            # Check if next message is the corresponding ToolMessage\n",
+        "            if (i + 1 < len(all_messages) and \n",
+        "                isinstance(all_messages[i + 1], ToolMessage)):\n",
+        "                \n",
+        "                # Add the AIMessage → ToolMessage pair\n",
+        "                valid_messages.append(msg)\n",
+        "                valid_messages.append(all_messages[i + 1])\n",
+        "                print(f\"✅ Added tool call pair: {msg.tool_calls[0].get('name')} → {all_messages[i + 1].tool_call_id}\")\n",
+        "                i += 2  # Skip both messages\n",
+        "            else:\n",
+        "                print(f\"⚠️  Skipping AIMessage with tool_calls (no following ToolMessage)\")\n",
+        "                i += 1\n",
+        "        else:\n",
+        "            # Skip non-tool-call messages for RAGAS validation\n",
+        "            i += 1\n",
+        "    \n",
+        "    print(f\"🔍 Filtered {len(all_messages)} → {len(valid_messages)} messages for RAGAS validation\")\n",
+        "    return valid_messages\n",
         "\n",
         "if agent_results and agent_results[0]:\n",
         "    print(\"📊 Evaluating Tool Call Accuracy...\")\n",
